# spine-open

./: .env.template  .gitignore  BENCHMARK.md  LICENSE  README-CLI.md  README.md  engine_backup.py  open_files.txt  pyproject.toml
.spine/: metadata.json
backend/: cli_prototype.py  requirements.txt  spine.py
backend/app/: main.py  mcp_server.py
backend/scripts/: audit_final_stability.py  diagnose_data_quality.py  export_training_data.py  final_grand_audit.py  generate_synthetic_data.py  ingest_test_doc.py  list_docs.py  reset_doc.py  secure_distribute.py  showcase_h_rag.py  showcase_matrix_fusion.py  showcase_medical_expert.py  train_deepseek_r1.py  train_expert_model.py  wsl_gpu_test.py
backend/tests/: conftest.py  test_agent_boundary.py  test_agent_e2e.py  test_backend_e2e.py  test_classifier.py  test_db_connection.py  test_e2e_ai_pipeline.py  test_hybrid_retriever.py  test_llm_recovery.py  test_metrics_benchmark.py  test_ocr_integration.py  test_ocr_worker.py  test_parser.py  test_parser_worker.py  test_rag_mock.py  test_rapidocr.py  test_scanned_pdf.py  test_semantic_splitter.py  test_splitter.py  test_toc_logic.py  test_validator_hardened.py  test_visual_parser.py  verify_ai_collaboration.py  verify_b1_models.py  verify_b2_storage.py  (+11 more)
docker/: Dockerfile  docker-compose.yml
docs/: ARCHITECTURE.md  BENCHMARK.md  USAGE.md
examples/: quickstart.py  upload_document.py
scripts/: benchmark_performance.py  test_mcp_local.py
spine_cli/: __init__.py  main.py
spine_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
(+35 files in other folders)
